fixes note overflow issue

--- a/src/Notes/notes.css
+++ b/src/Notes/notes.css
@@ -184,6 +184,9 @@
     }
     >*{
         font-size: 0.7rem;
+        width: 100%;
+        overflow: hidden;
+        word-break: break-all;
     }
     >.note-bottom{
         display: flex;
